fix lower text alignment issue

--- a/src/App.scss
+++ b/src/App.scss
@@ -31,6 +31,7 @@ body {
       margin: 20px 64px;
       .tagline {
         align-self: flex-end;
+        text-align: right;
       }
     }
   }
